# hose

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  deno.json  devenv.nix  devenv.yaml  flake.nix  hose.toml.example  index.yaml  package-lock.json  package.json  rescript.json  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  treefmt.toml
.ast-grep/rules/: no-inline-qualified-paths.yaml  no-use-in-functions.yaml
.beads/: issues.jsonl  last-touched
.github/workflows/: ci.yml  helm-release.yaml  helm-release.yml  merge.yaml  merge.yml  pr.yaml  pr.yml  release.yaml  release.yml
charts/hose/: Chart.yaml  README.md  values.yaml
charts/hose/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service-grpc.yaml  service-web.yaml  service.yaml  serviceaccount.yaml
docs/: design.md
examples/: trace_generator.rs
migrations/: 001_initial_schema.sql
nix/: checks.nix  hose.nix  rescript.nix
rescript/src/: DashboardLive.res  DomUtil.res  SseClient.res  TraceInspector.res
scripts/: gha-update.sh  gha-update.ts
src/: blokli.rs  cleanup.rs  config.rs  db.rs  identity.rs  lib.rs  main.rs  pages.rs  peer_router.rs  peer_tracker.rs  proto.rs  server.rs  session_tracker.rs  types.rs  write_buffer.rs
src/api/: channels.rs  debug_sessions.rs  events.rs  mod.rs  peers.rs  sessions.rs  telemetry.rs
src/blokli/: channels.rs  mod.rs  subscriptions.rs
src/db/: debug_sessions.rs  mod.rs  telemetry.rs
src/receiver/: logs.rs  metrics.rs  mod.rs  trace.rs
static/css/: hose.css
templates/: base.html  dashboard.html  debug_session_detail.html  debug_sessions.html  peers.html  sessions.html  trace_inspector.html
tests/: debug_sessions.rs  e2e.rs  grpc_ingestion.rs
